--- a/notebooks/plots_for_paper.ipynb
+++ b/notebooks/plots_for_paper.ipynb
@@ -1441,7 +1441,7 @@
    "id": "e3efd34b-3528-4ce2-8392-5f8dbe7ca9bc",
    "metadata": {},
    "source": [
-    "## Effectiveness of constratins"
+    "## Effectiveness of constraints"
    ]
   },
   {
@@ -1905,6 +1905,315 @@
    ],
    "source": [
     "len(STRONG_DF), len(WEAK_DF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de28cfdb-9958-4520-b553-ef283bca2b20",
+   "metadata": {},
+   "source": [
+    "# Target with most subnets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "3508b789-c853-4e4b-a166-85caee54e23d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BIOMD0000000067'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "targets[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "f079cfc9-5e84-417f-a1bb-e7ea36a13990",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = list(STRONG_DF[cn.FINDER_TARGET_NAME].values)\n",
+    "targets = [int(n[-5:-1]) for n in targets]\n",
+    "target_dct = {n: targets.count(n) for n in set(targets)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "f721b2f5-eb21-41ce-908a-8373226e7c73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BIOMD0000001059'"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(STRONG_DF[cn.FINDER_TARGET_NAME].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "8d4d10aa-a0fb-4506-a645-551cda9966d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{85: 85}"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{t: t for t in target_dct.keys() if  target_dct[t] == 57}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "2c3b980e-ad65-4055-a3c3-9dbf0bc04742",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>reference_name</th>\n",
+       "      <th>target_name</th>\n",
+       "      <th>reference_network</th>\n",
+       "      <th>induced_network</th>\n",
+       "      <th>name_dct</th>\n",
+       "      <th>num_assignment_pair</th>\n",
+       "      <th>is_truncated</th>\n",
+       "      <th>probability_of_occurrence_strong</th>\n",
+       "      <th>truncated_strong</th>\n",
+       "      <th>probability_of_occurrence_weak</th>\n",
+       "      <th>trunceated_weak</th>\n",
+       "      <th>estimated_poc_strong</th>\n",
+       "      <th>estimated_poc_weak</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>236</td>\n",
+       "      <td>BIOMD0000000156</td>\n",
+       "      <td>BIOMD0000001059</td>\n",
+       "      <td>BIOMD0000000156: 3 species, 5 reactions\\n  R1:...</td>\n",
+       "      <td>4814365: 3 species, 5 reactions\\n  Production_...</td>\n",
+       "      <td>{\"species_names\": {\"x\": \"iap\", \"y\": \"c3\", \"y0\"...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000336</td>\n",
+       "      <td>0.000252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>604</th>\n",
+       "      <td>604</td>\n",
+       "      <td>BIOMD0000000546</td>\n",
+       "      <td>BIOMD0000001059</td>\n",
+       "      <td>BIOMD0000000546: 3 species, 5 reactions\\n  re1...</td>\n",
+       "      <td>9209917: 3 species, 5 reactions\\n  cleavage_of...</td>\n",
+       "      <td>{\"species_names\": {\"s1\": \"pc3\", \"s2\": \"c3\", \"s...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000420</td>\n",
+       "      <td>0.000546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>705</th>\n",
+       "      <td>705</td>\n",
+       "      <td>BIOMD0000000789</td>\n",
+       "      <td>BIOMD0000001059</td>\n",
+       "      <td>BIOMD0000000789: 4 species, 5 reactions\\n  vir...</td>\n",
+       "      <td>3028684: 4 species, 5 reactions\\n  Production_...</td>\n",
+       "      <td>{\"species_names\": {\"V\": \"iap\", \"S\": \"pc3\", \"I\"...</td>\n",
+       "      <td>56</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1076</th>\n",
+       "      <td>1076</td>\n",
+       "      <td>BIOMD0000001012</td>\n",
+       "      <td>BIOMD0000001059</td>\n",
+       "      <td>BIOMD0000001012: 4 species, 7 reactions\\n  CAR...</td>\n",
+       "      <td>4139213: 4 species, 7 reactions\\n  Production_...</td>\n",
+       "      <td>{\"species_names\": {\"CAR_T_cells\": \"iap\", \"Leuk...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1207</th>\n",
+       "      <td>1207</td>\n",
+       "      <td>BIOMD0000001048</td>\n",
+       "      <td>BIOMD0000001059</td>\n",
+       "      <td>BIOMD0000001048: 3 species, 6 reactions\\n  mig...</td>\n",
+       "      <td>9114784: 3 species, 6 reactions\\n  cleavage_of...</td>\n",
+       "      <td>{\"species_names\": {\"Ttum\": \"pc3\", \"Tplas\": \"c3...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index   reference_name      target_name  \\\n",
+       "236     236  BIOMD0000000156  BIOMD0000001059   \n",
+       "604     604  BIOMD0000000546  BIOMD0000001059   \n",
+       "705     705  BIOMD0000000789  BIOMD0000001059   \n",
+       "1076   1076  BIOMD0000001012  BIOMD0000001059   \n",
+       "1207   1207  BIOMD0000001048  BIOMD0000001059   \n",
+       "\n",
+       "                                      reference_network  \\\n",
+       "236   BIOMD0000000156: 3 species, 5 reactions\\n  R1:...   \n",
+       "604   BIOMD0000000546: 3 species, 5 reactions\\n  re1...   \n",
+       "705   BIOMD0000000789: 4 species, 5 reactions\\n  vir...   \n",
+       "1076  BIOMD0000001012: 4 species, 7 reactions\\n  CAR...   \n",
+       "1207  BIOMD0000001048: 3 species, 6 reactions\\n  mig...   \n",
+       "\n",
+       "                                        induced_network  \\\n",
+       "236   4814365: 3 species, 5 reactions\\n  Production_...   \n",
+       "604   9209917: 3 species, 5 reactions\\n  cleavage_of...   \n",
+       "705   3028684: 4 species, 5 reactions\\n  Production_...   \n",
+       "1076  4139213: 4 species, 7 reactions\\n  Production_...   \n",
+       "1207  9114784: 3 species, 6 reactions\\n  cleavage_of...   \n",
+       "\n",
+       "                                               name_dct  num_assignment_pair  \\\n",
+       "236   {\"species_names\": {\"x\": \"iap\", \"y\": \"c3\", \"y0\"...                    8   \n",
+       "604   {\"species_names\": {\"s1\": \"pc3\", \"s2\": \"c3\", \"s...                    8   \n",
+       "705   {\"species_names\": {\"V\": \"iap\", \"S\": \"pc3\", \"I\"...                   56   \n",
+       "1076  {\"species_names\": {\"CAR_T_cells\": \"iap\", \"Leuk...                   20   \n",
+       "1207  {\"species_names\": {\"Ttum\": \"pc3\", \"Tplas\": \"c3...                    4   \n",
+       "\n",
+       "      is_truncated  probability_of_occurrence_strong  truncated_strong  \\\n",
+       "236          False                               0.0               0.0   \n",
+       "604          False                               0.0               0.0   \n",
+       "705          False                               0.0               0.0   \n",
+       "1076         False                               0.0               0.0   \n",
+       "1207         False                               0.0               0.0   \n",
+       "\n",
+       "      probability_of_occurrence_weak  trunceated_weak  estimated_poc_strong  \\\n",
+       "236                              0.0              0.0              0.000336   \n",
+       "604                              0.0              0.0              0.000420   \n",
+       "705                              0.0              0.0              0.000000   \n",
+       "1076                             0.0              0.0              0.000000   \n",
+       "1207                             0.0              0.0              0.000000   \n",
+       "\n",
+       "      estimated_poc_weak  \n",
+       "236             0.000252  \n",
+       "604             0.000546  \n",
+       "705             0.000000  \n",
+       "1076            0.000000  \n",
+       "1207            0.000000  "
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sel = STRONG_DF[cn.FINDER_TARGET_NAME] == \"BIOMD0000001059\"\n",
+    "STRONG_DF[sel]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "90e65c07-a440-4e2c-a8b6-686e463bf56b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       BIOMD0000000067\n",
+       "1       BIOMD0000000715\n",
+       "2       BIOMD0000000848\n",
+       "3       BIOMD0000000170\n",
+       "4       BIOMD0000000228\n",
+       "             ...       \n",
+       "1207    BIOMD0000001059\n",
+       "1208    BIOMD0000000294\n",
+       "1209    BIOMD0000000810\n",
+       "1210    BIOMD0000000852\n",
+       "1211    BIOMD0000001033\n",
+       "Name: target_name, Length: 1212, dtype: object"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "STRONG_DF[cn.FINDER_TARGET_NAME] == "
    ]
   },
   {
