Changed 'assignment_pair' to 'mapping_pair'

--- a/examples/api_basics.ipynb
+++ b/examples/api_basics.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0.6\n"
+      "1.0.0\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ssignments: 100%|███████████| 8333330/8333330 [00:00<00:00, 35922424822.53it/s]"
+      "mapping pairs: 100%|██████████████████| 1041/1041 [00:00<00:00, 2617668.14it/s]"
      ]
     }
    ],
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "result.assignment_pairs"
+    "result.mapping_pairs"
    ]
   },
   {
@@ -301,7 +301,7 @@
     {
      "data": {
       "text/plain": [
-       "217578: 3 species, 2 reactions\n",
+       "1792841: 3 species, 2 reactions\n",
        "  _J0: A -> B\n",
        "  _J1: B -> C"
       ]
@@ -404,14 +404,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|██████████| 483927410/483927410 [00:27<00:00, 17297194.25it/s]\n"
+      "\n",
+      "mapping pairs: 100%|████████| 483646637/483646637 [03:48<00:00, 2113521.85it/s]"
      ]
     }
    ],
    "source": [
-    "# This takes about 10 minutes to run on Colab\n",
+    "# This takes about 10 minutes to run on Colab. If you are in a local environment,\n",
+    "#   set num_process=-1 so that parallel processing can be used. Parallel processing causes problems in Colab.\n",
     "rr = te.loadSBMLModel(URL)\n",
-    "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), is_subnet=True,\n",
+    "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), \n",
+    "        max_num_mapping_pair=1e14, is_subnet=True, num_process=1,\n",
     "        identity=cn.ID_WEAK, is_report=IS_PLOT)"
    ]
   },
@@ -449,7 +452,7 @@
     }
    ],
    "source": [
-    "len(result.assignment_pairs)"
+    "len(result.mapping_pairs)"
    ]
   },
   {
@@ -477,14 +480,14 @@
     {
      "data": {
       "text/plain": [
-       "4501904: 4 species, 7 reactions\n",
+       "4844484: 4 species, 7 reactions\n",
        "  R_31: xFinal_2 -> xFinal_1\n",
-       "  R_10:  -> xFinal_8\n",
-       "  R_33: xFinal_1 + xFinal_8 + xFinal_2 -> xFinal_8 + xFinal_2\n",
+       "  R_14: xFinal_7 -> 2.0 xFinal_7\n",
+       "  R_33: xFinal_1 + xFinal_2 -> xFinal_2\n",
        "  R_24: xFinal_2 -> xFinal_3 + xFinal_2\n",
        "  R_25: xFinal_3 -> \n",
-       "  R_32: xFinal_1 + xFinal_8 + xFinal_2 -> 2.0 xFinal_1 + xFinal_8 + xFinal_2\n",
-       "  R_12: xFinal_8 -> "
+       "  R_32: xFinal_1 + xFinal_2 -> 2.0 xFinal_1 + xFinal_2\n",
+       "  R_16: xFinal_7 -> "
       ]
      },
      "execution_count": 14,
@@ -503,7 +506,50 @@
     "id": "3fc7ce0a-58c3-4958-991c-ad4e4fa05b82"
    },
    "source": [
-    "Note that R_16 is assigned to J3. Note that J3 is a bi-uni reaction, but R_16 is uni-null. This assignment makes sense for weak identity since S4 is a reactant and a product in J3."
+    "Note that R_16 is assigned to J3. Note that J3 is a bi-uni reaction, but R_16 is uni-null. This reaction-mapping makes sense for weak identity since S4 is a reactant and a product in J3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a2bd2da-0002-4c83-b2f9-39ae37f7ea79",
+   "metadata": {},
+   "source": [
+    "We illustrate below the use of the keyword parameter ``max_num_mapping_pair``, which controls the maximum number of mapping pairs that will be evaluated. If it is set too small, then ``result.is_truncated`` will be True, indicatilng that mapping pairs exist but were not evaluated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "31e8d1a9-84e3-49d5-9c44-b909dbf9449c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runs fast because is_truncated is True\n",
+    "rr = te.loadSBMLModel(URL)\n",
+    "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), \n",
+    "        max_num_mapping_pair=1, is_subnet=True, num_process=1,\n",
+    "        identity=cn.ID_WEAK, is_report=IS_PLOT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2373f28c-7572-409c-8378-fa4fa6d2b904",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.is_truncated"
    ]
   },
   {
@@ -535,7 +581,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing reference model: BIOMD0000000031\n",
+      "Processing reference model: BIOMD0000000031\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "mapping pairs: 100%|█████████████████████| 260/260 [00:00<00:00, 364113.20it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Found matching model: BIOMD0000000031 and BIOMD0000000170\n",
       "Processing reference model: BIOMD0000000031\n"
      ]
@@ -544,8 +604,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|██████████| 2083330/2083330 [00:00<00:00, 9730645158.49it/s]\n",
-      "assignments: 100%|██████████| 2083330/2083330 [00:00<00:00, 3281306553.63it/s]\n"
+      "\n",
+      "mapping pairs: 100%|███████████████████| 1040/1040 [00:00<00:00, 575471.79it/s]"
      ]
     },
     {
@@ -561,7 +621,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ssignments: 100%|████████████| 2083330/2083330 [00:00<00:00, 4777539285.03it/s]"
+      "mapping pairs: 100%|████████████████████| 260/260 [00:00<00:00, 1325053.51it/s]"
      ]
     },
     {
@@ -578,7 +638,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ssignments: 100%|███████████| 2500000/2500000 [00:00<00:00, 14894545454.55it/s]"
+      "mapping pairs: 100%|████████████████████| 312/312 [00:00<00:00, 2152340.21it/s]"
      ]
     },
     {
@@ -593,7 +653,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|██████████| 2500000/2500000 [00:00<00:00, 9328967971.53it/s]\n"
+      "\n",
+      "mapping pairs: 100%|█████████████████████| 312/312 [00:00<00:00, 705457.06it/s]"
      ]
     },
     {
@@ -608,7 +669,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|████████████| 2500000/2500000 [00:00<00:00, 8531944670.46it/s]"
+      "\n",
+      "mapping pairs: 100%|████████████████████| 312/312 [00:00<00:00, 1083297.06it/s]"
      ]
     },
     {
@@ -627,8 +689,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "assignments: 100%|██████████| 1666660/1666660 [00:00<00:00, 7214116310.26it/s]\n"
+      " mapping pairs: 100%|█████████████████████| 416/416 [00:00<00:00, 543053.37it/s]"
      ]
     },
     {
@@ -636,6 +697,13 @@
      "output_type": "stream",
      "text": [
       "Found matching model: BIOMD0000000121 and BIOMD0000000960\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -655,9 +723,9 @@
     "* target_name: name of the model in the target directory\n",
     "* reference_network: Antimony representation of the complete reference model\n",
     "* induced_network: Antimony model of the induced network found in the target\n",
-    "* name_dct: dictionary that specifies the species and reaction assignments for the first assignment pair\n",
-    "* num_assignment_pair: number of assignment pairs\n",
-    "* is_truncated: True if the search was truncated because it exceeded the parameter max_num_assignment_pair"
+    "* name_dct: dictionary that specifies the species and reaction mappings for the first mapping pair\n",
+    "* num_mapping_pair: number of mapping pairs\n",
+    "* is_truncated: True if the search was truncated because it exceeded the parameter max_num_mapping_pair"
    ]
   },
   {
@@ -694,6 +762,7 @@
        "      <th>name_dct</th>\n",
        "      <th>num_assignment_pair</th>\n",
        "      <th>is_truncated</th>\n",
+       "      <th>num_mapping_pair</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -702,30 +771,33 @@
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000170</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>5633882: 6 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
+       "      <td>2386793: 6 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...</td>\n",
        "      <td>48</td>\n",
        "      <td>False</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000228</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>9052654: 6 species, 4 reactions\\n  pRB_phospho...</td>\n",
+       "      <td>9133053: 6 species, 4 reactions\\n  pRB_phospho...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"pRB\", \"Mp\": \"pRBp\", \"...</td>\n",
        "      <td>240</td>\n",
        "      <td>False</td>\n",
+       "      <td>240</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000354</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>9736127: 6 species, 4 reactions\\n  JChannel: C...</td>\n",
+       "      <td>2846167: 6 species, 4 reactions\\n  JChannel: C...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"CaS\", \"Mp\": \"CaI\", \"M...</td>\n",
        "      <td>12</td>\n",
        "      <td>False</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -736,36 +808,40 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000170</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>2386943: 5 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
+       "      <td>1065257: 5 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...</td>\n",
        "      <td>24</td>\n",
        "      <td>False</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000228</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>8898625: 5 species, 4 reactions\\n  pRB_phospho...</td>\n",
+       "      <td>1863431: 5 species, 4 reactions\\n  pRB_phospho...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"pRB\", \"Mp\": \"pRBp\", \"...</td>\n",
        "      <td>60</td>\n",
        "      <td>False</td>\n",
+       "      <td>60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000354</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>7403108: 5 species, 4 reactions\\n  JChannel: C...</td>\n",
+       "      <td>5124774: 5 species, 4 reactions\\n  JChannel: C...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"CaS\", \"Mp\": \"CaI\", \"M...</td>\n",
        "      <td>12</td>\n",
        "      <td>False</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -776,6 +852,7 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -786,6 +863,7 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -796,6 +874,7 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -806,16 +885,18 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>True</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>BIOMD0000000121</td>\n",
        "      <td>BIOMD0000000960</td>\n",
        "      <td>BIOMD0000000121: 6 species, 5 reactions\\n  rea...</td>\n",
-       "      <td>1284700: 6 species, 5 reactions\\n  Susceptible...</td>\n",
+       "      <td>4383909: 6 species, 5 reactions\\n  Susceptible...</td>\n",
        "      <td>{\"species_names\": {\"c3\": \"Susceptible\", \"c2\": ...</td>\n",
        "      <td>6</td>\n",
        "      <td>False</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -851,18 +932,18 @@
        "11  BIOMD0000000121: 6 species, 5 reactions\\n  rea...   \n",
        "\n",
        "                                      induced_network  \\\n",
-       "0   5633882: 6 species, 4 reactions\\n  BMAL1_nucle...   \n",
-       "1   9052654: 6 species, 4 reactions\\n  pRB_phospho...   \n",
-       "2   9736127: 6 species, 4 reactions\\n  JChannel: C...   \n",
+       "0   2386793: 6 species, 4 reactions\\n  BMAL1_nucle...   \n",
+       "1   9133053: 6 species, 4 reactions\\n  pRB_phospho...   \n",
+       "2   2846167: 6 species, 4 reactions\\n  JChannel: C...   \n",
        "3                                                       \n",
-       "4   2386943: 5 species, 4 reactions\\n  BMAL1_nucle...   \n",
-       "5   8898625: 5 species, 4 reactions\\n  pRB_phospho...   \n",
-       "6   7403108: 5 species, 4 reactions\\n  JChannel: C...   \n",
+       "4   1065257: 5 species, 4 reactions\\n  BMAL1_nucle...   \n",
+       "5   1863431: 5 species, 4 reactions\\n  pRB_phospho...   \n",
+       "6   5124774: 5 species, 4 reactions\\n  JChannel: C...   \n",
        "7                                                       \n",
        "8                                                       \n",
        "9                                                       \n",
        "10                                                      \n",
-       "11  1284700: 6 species, 5 reactions\\n  Susceptible...   \n",
+       "11  4383909: 6 species, 5 reactions\\n  Susceptible...   \n",
        "\n",
        "                                             name_dct num_assignment_pair  \\\n",
        "0   {\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...                  48   \n",
@@ -878,19 +959,19 @@
        "10                                                                          \n",
        "11  {\"species_names\": {\"c3\": \"Susceptible\", \"c2\": ...                   6   \n",
        "\n",
-       "    is_truncated  \n",
-       "0          False  \n",
-       "1          False  \n",
-       "2          False  \n",
-       "3          False  \n",
-       "4          False  \n",
-       "5          False  \n",
-       "6          False  \n",
-       "7          False  \n",
-       "8          False  \n",
-       "9          False  \n",
-       "10          True  \n",
-       "11         False  "
+       "    is_truncated num_mapping_pair  \n",
+       "0          False               48  \n",
+       "1          False              240  \n",
+       "2          False               12  \n",
+       "3          False                   \n",
+       "4          False               24  \n",
+       "5          False               60  \n",
+       "6          False               12  \n",
+       "7          False                   \n",
+       "8          False                   \n",
+       "9          False                   \n",
+       "10          True                   \n",
+       "11         False                6  "
       ]
      },
      "execution_count": 16,
@@ -930,12 +1011,12 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'pySubnetSB'...\n",
-      "remote: Enumerating objects: 3336, done.\u001b[K\n",
-      "remote: Counting objects: 100% (294/294), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (179/179), done.\u001b[K\n",
-      "remote: Total 3336 (delta 178), reused 185 (delta 86), pack-reused 3042 (from 2)\u001b[K\n",
-      "Receiving objects: 100% (3336/3336), 114.47 MiB | 15.35 MiB/s, done.\n",
-      "Resolving deltas: 100% (2389/2389), done.\n"
+      "remote: Enumerating objects: 3518, done.\u001b[K\n",
+      "remote: Counting objects: 100% (59/59), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (38/38), done.\u001b[K\n",
+      "remote: Total 3518 (delta 31), reused 44 (delta 21), pack-reused 3459 (from 2)\u001b[K\n",
+      "Receiving objects: 100% (3518/3518), 114.97 MiB | 2.67 MiB/s, done.\n",
+      "Resolving deltas: 100% (2524/2524), done.\n"
      ]
     }
    ],
