--- a/examples/api_basics.ipynb
+++ b/examples/api_basics.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0.0\n"
+      "1.0.1\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mapping pairs: 100%|██████████████████| 1041/1041 [00:00<00:00, 2617668.14it/s]"
+      "mapping pairs: 100%|██████████████████| 1041/1041 [00:00<00:00, 3857129.39it/s]"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     {
      "data": {
       "text/plain": [
-       "1792841: 3 species, 2 reactions\n",
+       "8153510: 3 species, 2 reactions\n",
        "  _J0: A -> B\n",
        "  _J1: B -> C"
       ]
@@ -405,17 +405,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mapping pairs: 100%|████████| 483646637/483646637 [03:48<00:00, 2113521.85it/s]"
+      "mapping pairs: 100%|████████| 483646637/483646637 [04:08<00:00, 1945031.05it/s]"
      ]
     }
    ],
    "source": [
     "# This takes about 10 minutes to run on Colab. If you are in a local environment,\n",
     "#   set num_process=-1 so that parallel processing can be used. Parallel processing causes problems in Colab.\n",
-    "rr = te.loadSBMLModel(URL)\n",
-    "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), \n",
-    "        max_num_mapping_pair=1e14, is_subnet=True, num_process=1,\n",
-    "        identity=cn.ID_WEAK, is_report=IS_PLOT)"
+    "result = findReferenceInTarget(\n",
+    "        reference_model,                                        # Reference model as an Antimony string\n",
+    "        ModelSpecification(URL, specification_type=\"sbmlurl\"),  # Target as a URL in BioModels\n",
+    "        max_num_mapping_pair=1e14,                              # Maximum number of mapping pairs considered\n",
+    "        is_subnet=True,                                         # Checking for subnet, not equality\n",
+    "        num_process=1,                                          # No process parallelism\n",
+    "        identity=cn.ID_WEAK,                                    # Look for weak identity\n",
+    "        is_report=IS_PLOT)                                      # Provide status information"
    ]
   },
   {
@@ -480,7 +484,7 @@
     {
      "data": {
       "text/plain": [
-       "4844484: 4 species, 7 reactions\n",
+       "8225589: 4 species, 7 reactions\n",
        "  R_31: xFinal_2 -> xFinal_1\n",
        "  R_14: xFinal_7 -> 2.0 xFinal_7\n",
        "  R_33: xFinal_1 + xFinal_2 -> xFinal_2\n",
@@ -519,10 +523,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "31e8d1a9-84e3-49d5-9c44-b909dbf9449c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "mapping pairs: 100%|████████████████████| 223/223 [00:00<00:00, 2792029.23it/s]"
+     ]
+    }
+   ],
    "source": [
     "# Runs fast because is_truncated is True\n",
     "rr = te.loadSBMLModel(URL)\n",
@@ -533,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "2373f28c-7572-409c-8378-fa4fa6d2b904",
    "metadata": {},
    "outputs": [
@@ -543,7 +556,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "c15705f2-894c-487f-855e-44e93284653c",
    "metadata": {},
    "outputs": [
@@ -589,7 +602,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mapping pairs: 100%|█████████████████████| 260/260 [00:00<00:00, 364113.20it/s]"
+      "mapping pairs: 100%|█████████████████████| 260/260 [00:00<00:00, 336268.59it/s]"
      ]
     },
     {
@@ -605,7 +618,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mapping pairs: 100%|███████████████████| 1040/1040 [00:00<00:00, 575471.79it/s]"
+      "mapping pairs: 100%|███████████████████| 1040/1040 [00:00<00:00, 554971.52it/s]"
      ]
     },
     {
@@ -621,7 +634,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mapping pairs: 100%|████████████████████| 260/260 [00:00<00:00, 1325053.51it/s]"
+      "mapping pairs: 100%|█████████████████████| 260/260 [00:00<00:00, 888044.82it/s]"
      ]
     },
     {
@@ -638,7 +651,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mapping pairs: 100%|████████████████████| 312/312 [00:00<00:00, 2152340.21it/s]"
+      "mapping pairs: 100%|█████████████████████| 312/312 [00:00<00:00, 971509.17it/s]"
      ]
     },
     {
@@ -654,7 +667,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mapping pairs: 100%|█████████████████████| 312/312 [00:00<00:00, 705457.06it/s]"
+      "mapping pairs: 100%|█████████████████████| 312/312 [00:00<00:00, 469040.45it/s]"
      ]
     },
     {
@@ -670,7 +683,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mapping pairs: 100%|████████████████████| 312/312 [00:00<00:00, 1083297.06it/s]"
+      "mapping pairs: 100%|████████████████████| 312/312 [00:00<00:00, 1232224.90it/s]"
      ]
     },
     {
@@ -689,7 +702,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " mapping pairs: 100%|█████████████████████| 416/416 [00:00<00:00, 543053.37it/s]"
+      " mapping pairs: 100%|█████████████████████| 416/416 [00:00<00:00, 493447.53it/s]"
      ]
     },
     {
@@ -730,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "50e97421-6f74-4cdb-b9c7-56927ea9b7dc",
    "metadata": {},
    "outputs": [
@@ -771,7 +784,7 @@
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000170</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>2386793: 6 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
+       "      <td>9077916: 6 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...</td>\n",
        "      <td>48</td>\n",
        "      <td>False</td>\n",
@@ -782,7 +795,7 @@
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000228</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>9133053: 6 species, 4 reactions\\n  pRB_phospho...</td>\n",
+       "      <td>3962563: 6 species, 4 reactions\\n  pRB_phospho...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"pRB\", \"Mp\": \"pRBp\", \"...</td>\n",
        "      <td>240</td>\n",
        "      <td>False</td>\n",
@@ -793,7 +806,7 @@
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000354</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>2846167: 6 species, 4 reactions\\n  JChannel: C...</td>\n",
+       "      <td>169488: 6 species, 4 reactions\\n  JChannel: Ca...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"CaS\", \"Mp\": \"CaI\", \"M...</td>\n",
        "      <td>12</td>\n",
        "      <td>False</td>\n",
@@ -815,7 +828,7 @@
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000170</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>1065257: 5 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
+       "      <td>3367703: 5 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...</td>\n",
        "      <td>24</td>\n",
        "      <td>False</td>\n",
@@ -826,7 +839,7 @@
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000228</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>1863431: 5 species, 4 reactions\\n  pRB_phospho...</td>\n",
+       "      <td>2780680: 5 species, 4 reactions\\n  pRB_phospho...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"pRB\", \"Mp\": \"pRBp\", \"...</td>\n",
        "      <td>60</td>\n",
        "      <td>False</td>\n",
@@ -837,7 +850,7 @@
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000354</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>5124774: 5 species, 4 reactions\\n  JChannel: C...</td>\n",
+       "      <td>6698316: 5 species, 4 reactions\\n  JChannel: C...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"CaS\", \"Mp\": \"CaI\", \"M...</td>\n",
        "      <td>12</td>\n",
        "      <td>False</td>\n",
@@ -892,7 +905,7 @@
        "      <td>BIOMD0000000121</td>\n",
        "      <td>BIOMD0000000960</td>\n",
        "      <td>BIOMD0000000121: 6 species, 5 reactions\\n  rea...</td>\n",
-       "      <td>4383909: 6 species, 5 reactions\\n  Susceptible...</td>\n",
+       "      <td>9365086: 6 species, 5 reactions\\n  Susceptible...</td>\n",
        "      <td>{\"species_names\": {\"c3\": \"Susceptible\", \"c2\": ...</td>\n",
        "      <td>6</td>\n",
        "      <td>False</td>\n",
@@ -932,18 +945,18 @@
        "11  BIOMD0000000121: 6 species, 5 reactions\\n  rea...   \n",
        "\n",
        "                                      induced_network  \\\n",
-       "0   2386793: 6 species, 4 reactions\\n  BMAL1_nucle...   \n",
-       "1   9133053: 6 species, 4 reactions\\n  pRB_phospho...   \n",
-       "2   2846167: 6 species, 4 reactions\\n  JChannel: C...   \n",
+       "0   9077916: 6 species, 4 reactions\\n  BMAL1_nucle...   \n",
+       "1   3962563: 6 species, 4 reactions\\n  pRB_phospho...   \n",
+       "2   169488: 6 species, 4 reactions\\n  JChannel: Ca...   \n",
        "3                                                       \n",
-       "4   1065257: 5 species, 4 reactions\\n  BMAL1_nucle...   \n",
-       "5   1863431: 5 species, 4 reactions\\n  pRB_phospho...   \n",
-       "6   5124774: 5 species, 4 reactions\\n  JChannel: C...   \n",
+       "4   3367703: 5 species, 4 reactions\\n  BMAL1_nucle...   \n",
+       "5   2780680: 5 species, 4 reactions\\n  pRB_phospho...   \n",
+       "6   6698316: 5 species, 4 reactions\\n  JChannel: C...   \n",
        "7                                                       \n",
        "8                                                       \n",
        "9                                                       \n",
        "10                                                      \n",
-       "11  4383909: 6 species, 5 reactions\\n  Susceptible...   \n",
+       "11  9365086: 6 species, 5 reactions\\n  Susceptible...   \n",
        "\n",
        "                                             name_dct num_assignment_pair  \\\n",
        "0   {\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...                  48   \n",
@@ -974,7 +987,7 @@
        "11         False                6  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "8ab8b822-d4a1-41c3-b430-64c18988ea90",
    "metadata": {},
    "outputs": [
@@ -1011,12 +1024,12 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'pySubnetSB'...\n",
-      "remote: Enumerating objects: 3518, done.\u001b[K\n",
-      "remote: Counting objects: 100% (59/59), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (38/38), done.\u001b[K\n",
-      "remote: Total 3518 (delta 31), reused 44 (delta 21), pack-reused 3459 (from 2)\u001b[K\n",
-      "Receiving objects: 100% (3518/3518), 114.97 MiB | 2.67 MiB/s, done.\n",
-      "Resolving deltas: 100% (2524/2524), done.\n"
+      "remote: Enumerating objects: 3546, done.\u001b[K\n",
+      "remote: Counting objects: 100% (87/87), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (60/60), done.\u001b[K\n",
+      "remote: Total 3546 (delta 43), reused 56 (delta 27), pack-reused 3459 (from 2)\u001b[K\n",
+      "Receiving objects: 100% (3546/3546), 115.07 MiB | 17.68 MiB/s, done.\n",
+      "Resolving deltas: 100% (2536/2536), done.\n"
      ]
     }
    ],
@@ -1027,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "1bcd73ff-b88e-465d-b348-cb26fc7fbbb6",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "0eab7fae-c402-4876-b4ee-bd53840e2e84",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "14f9e282-065f-445b-9941-e4768bb6da38",
    "metadata": {},
    "outputs": [],
