Paper submission updates

--- a/docs/paper/submission/main_marked.tex
+++ b/docs/paper/submission/main_marked.tex
@@ -35,7 +35,7 @@
 \graphicspath{{Fig/}}
 
 % new commands
-\newcommand{\revision}[1]{\color{black}{#1 }\color{black}}
+\newcommand{\revision}[1]{\color{red}{#1 }\color{black}}
 \newcommand{\revisionb}[1]{\color{red}{#1}\color{black}}
 \newcommand{\comment}[2]{
   \color{red} *{#1}*{\bf #2} \color{black}}
